# vectors

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  installer-smoke.yml  release.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md
examples/: benchmark_ingestion.rs  benchmark_storage.rs  benchmark_vector_search.rs  hybrid_search.rs
src/: api.rs  durable.rs  engine.rs  error.rs  lib.rs  main.rs  storage.rs  vector.rs
tests/: api.rs  database.rs  server_recovery.rs
web/: app.css  app.js  index.html
