[package]
name = "vectors"
version = "0.1.0"
edition = "2021"
description = "An embeddable SQL engine for relational data and vector similarity search"
readme = "README.md"
keywords = ["database", "sql", "vector", "embeddings", "search"]
categories = ["database-implementations"]

[dependencies]
actix-web = "4.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.43.0"
thiserror = "1.0"

[lints.rust]
unsafe_code = "forbid"
